--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: "Eclipse Phase: Thebes"
 email: ben@xyleth.co.uk
 description: >- # this means to ignore newlines until "baseurl:"
   A site for rules and game reports for our homebrew Eclipse Phase / PbTA Mashup.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/content" # the subpath of your site, e.g. /blog
 url: "https://thebes.xyleth.co.uk" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: xyleth
 github_username: xleth
