--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,10 @@ url: "https://thebes.xyleth.co.uk" # the base hostname & protocol for your site,
 twitter_username: xyleth
 github_username: xleth
 
+exclude:
+  - LICENSE
+  - README.MD
+
 # Build settings
 theme: just-the-docs
 plugins:
