--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,13 @@ url: "https://thebes.xyleth.co.uk" # the base hostname & protocol for your site,
 twitter_username: xyleth
 github_username: xleth
 
+# Exclude build related files from the bundle
 exclude:
   - LICENSE
   - README.MD
+
+# Theme settings
+favicon_ico: "/assets/images/favicon.ico"
 
 # Build settings
 theme: just-the-docs
