--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_username: xleth
 exclude:
   - LICENSE
   - README.MD
+  - archive/
 
 # Theme settings
 favicon_ico: "/assets/images/favicon.ico"
